k8s/culturale-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: culturale-server
  labels:
    app: culturale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: culturale
  template:
    metadata:
      labels:
        app: culturale
    spec:
      containers:
        - name: culturale
          image: culturale/culturale-api:v1.0.1
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: culturale-service
spec:
  type: NodePort
  selector:
    app: culturale
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort:  30100
