k8s/culturale-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: culturale-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: culturale-server
            port:
              number: 3000
